shadertoy style resolution and time uniforms

--- a/tutorials/2D/index.html
+++ b/tutorials/2D/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="./webgl.css" type="text/css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js">
     </script>
+    <script src="utils.js" defer></script>
     <script src="webgl-demo.js" defer></script>
 </head>
 
 <body>
-<canvas id="glcanvas" width="640" height="480"></canvas>
+<canvas id="glcanvas" width="1000" height="1000"></canvas>
 </body>
 </html>
