--- a/sketches/planet.html
+++ b/sketches/planet.html
@@ -22,7 +22,7 @@
 
     void main() {
         // Multiply the position by the matrix.
-        gl_Position = u_matrix * a_position;
+        gl_Position =  u_matrix * a_position;
 
         // orient the normals and pass to the fragment shader
         v_normal = mat3(u_matrix * u_worldInverseTranspose) * a_normal;
@@ -45,7 +45,7 @@
         // will make it a unit vector again
         vec3 normal = normalize(v_normal);
 
-        float light = dot(normal, u_reverseLightDirection);
+        float light = clamp(dot(normal, u_reverseLightDirection), 0., 1.);
 
         gl_FragColor = u_color * u_colorMult;
 
@@ -59,5 +59,5 @@
 <script src="../lib/http_webglfundamentals.org_webgl_resources_m4.js"></script>
 <script src="../lib/http_webglfundamentals.org_webgl_resources_primitives.js"></script>
 <script src="../lib/http_webglfundamentals.org_webgl_resources_chroma.min.js"></script>
-
+<script src="../utils/utils.js"></script>
 <script src="planet.js"></script>
