--- a/sketches/planet_backup_0/planet.html
+++ b/sketches/planet_backup_0/planet.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Planet</title>
 </head>
-<body>
-<canvas id="myCanvas"></canvas>
+<body style="background-color: rgba(12, 12, 12, 1); width: 100%; height: 100%">
+<!--<div>fps: <span id="fps"></span></div>-->
+<canvas id="myCanvas" style="width: 100%; height: 100%"></canvas>
 </body>
 </html>
 
@@ -45,13 +46,13 @@
     uniform vec4 u_colorMult;
 
     void main() {
-        gl_FragColor = v_color * u_colorMult;
+        gl_FragColor = v_color*u_colorMult;
     }
 </script>
 
-<script src="../lib/http_webglfundamentals.org_webgl_resources_webgl-utils.js"></script>
-<script src="../lib/http_webglfundamentals.org_webgl_resources_m4.js"></script>
-<script src="../lib/http_webglfundamentals.org_webgl_resources_primitives.js"></script>
-<script src="../lib/http_webglfundamentals.org_webgl_resources_chroma.min.js"></script>
+<script src="../../lib/http_webglfundamentals.org_webgl_resources_webgl-utils.js"></script>
+<script src="../../lib/http_webglfundamentals.org_webgl_resources_m4.js"></script>
+<script src="../../lib/http_webglfundamentals.org_webgl_resources_primitives.js"></script>
+<script src="../../lib/http_webglfundamentals.org_webgl_resources_chroma.min.js"></script>
 
 <script src="planet.js"></script>
